find_all_sources(. osx_SRCS)
list(REMOVE_ITEM osx_SRCS ./CoreAudioSoundManager.cpp)
if(NOT TARGET_ATV2)
  list(REMOVE_ITEM osx_SRCS ./IOSEAGLView.mm)
  list(REMOVE_ITEM osx_SRCS ./IOSExternalTouchController.mm)
  list(REMOVE_ITEM osx_SRCS ./IOSScreenManager.mm)
else(NOT TARGET_ATV2)
  add_subdirectory(atv2)
  list(REMOVE_ITEM osx_SRCS ./HotKeyController.m)
endif(NOT TARGET_ATV2)
list(REMOVE_ITEM osx_SRCS ./XBMCHelper.cpp)
add_sources(${osx_SRCS})
